2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_add_networks_helper): better solution to matching active AP
			with the correct menu item; also block emission of 'activate'
			signal when marking the currently active AP in the menu so that
			unintended activations don't occur

2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h
		- (nm_network_menu_item_find_dupe, nm_network_menu_item_add_dupe): new
			functions; need to keep track of duplicates when collapsing
			APs for display in the menu so that the right menu item can be
			checked for the active AP

	* src/applet.c
		- (nma_add_networks_helper, nma_menu_device_add_access_points): store
			the active access point and check only the menu item that
			corresponds to it

2007-10-04  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (foo_device_state_changed_cb): if device is in state ACTIVATED,
			find the connection that is activated for this device and update
			it's timestamp
		- (foo_device_state_changed): don't print connection out any more
		- (foo_client_state_change): don't try to destroy an invalid hash table

2007-10-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.h
	  src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_save): new function; write a
			connection to GConf
		- (applet_dbus_settings_init): listen to GConf key changes for the
			entire connections directory, not each connection's own directory.
			Lets the applet get notifications when connections are removed or
			added.
		- (applet_dbus_settings_finalize): clean up GConf notifiers
		- (connections_changed_cb): handle connection additions, deletions,
			and changes
		- (applet_dbus_settings_get_by_gconf_path): new function
		- (applet_dbus_connection_settings_finalize): no longer clean up GConf
			stuff here
		- (applet_dbus_connection_settings_changed): renamed from
			connection_settings_changed_cb(), and validate the connection after